# rust-mxfinfo

./: Cargo.toml  LICENSE  build.rs
src/: ffi.rs  lib.rs  macros.rs
src/ffi/: consts.rs  mod.rs  mxf.rs  types.rs
